Final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADDINFOCOMM_CLOSE
    ADDINFOCOMM_OPEN
    RISK_ADDINFO_CLOSE
    RISK_ADDINFO_OPEN
    SECUOBJ_ADDINFO_CLOSE
    SECUOBJ_ADDINFO_OPEN
    SECUOBJ_OBJSP_OPEN

Grammar

Rule 0     S' -> doc_model
Rule 1     doc_model -> XML_VERSION doc_model
Rule 2     doc_model -> doc_comment doc_model
Rule 3     doc_model -> OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
Rule 4     office_model -> OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE
Rule 5     model_nodes -> MODEL_NODES_OPEN model_node model_nodes
Rule 6     model_nodes -> model_node model_nodes
Rule 7     model_nodes -> MODEL_NODES_CLOSE
Rule 8     model_node -> MODEL_NODE_OPEN model_node
Rule 9     model_node -> basic_info model_node
Rule 10    model_node -> node_security_objective model_node
Rule 11    model_node -> structure_security_relationships model_node
Rule 12    model_node -> vulnerabilities model_node
Rule 13    model_node -> threats model_node
Rule 14    model_node -> node_risks model_node
Rule 15    model_node -> structure_security_policies model_node
Rule 16    model_node -> security_controls model_node
Rule 17    model_node -> MODEL_NODE_CLOSE
Rule 18    basic_info -> BASIC_INFORMATION_OPEN basic_info
Rule 19    basic_info -> component_name basic_info
Rule 20    basic_info -> component_overview basic_info
Rule 21    basic_info -> intrinsical_properties basic_info
Rule 22    basic_info -> BASIC_INFORMATION_CLOSE
Rule 23    component_name -> COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
Rule 24    intrinsical_properties -> INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
Rule 25    intrinsical_properties -> properties_color intrinsical_properties
Rule 26    intrinsical_properties -> properties_material intrinsical_properties
Rule 27    intrinsical_properties -> properties_height intrinsical_properties
Rule 28    intrinsical_properties -> properties_weight intrinsical_properties
Rule 29    intrinsical_properties -> properties_count intrinsical_properties
Rule 30    intrinsical_properties -> properties_fragility intrinsical_properties
Rule 31    intrinsical_properties -> properties_property intrinsical_properties
Rule 32    intrinsical_properties -> INTRINSICAL_PROPERTIES_CLOSE
Rule 33    component_overview -> COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
Rule 34    properties_color -> PROPERTIES_COLOR_OPEN str PROPERTIES_COLOR_CLOSE
Rule 35    properties_material -> PROPERTIES_MATERIAL_OPEN str PROPERTIES_MATERIAL_CLOSE
Rule 36    properties_height -> PROPERTIES_HEIGHT_OPEN str PROPERTIES_HEIGHT_CLOSE
Rule 37    properties_weight -> PROPERTIES_WEIGHT_OPEN str PROPERTIES_WEIGHT_CLOSE
Rule 38    properties_count -> PROPERTIES_COUNT_OPEN str PROPERTIES_COUNT_CLOSE
Rule 39    properties_fragility -> PROPERTIES_FRAGILITY_OPEN str PROPERTIES_FRAGILITY_CLOSE
Rule 40    properties_property -> PROPERTIES_PROPERTY_OPEN str PROPERTIES_PROPERTY_CLOSE
Rule 41    node_security_objective -> NODE_SECUOBJ_OPEN node_security_objective
Rule 42    node_security_objective -> security_objective_obj node_security_objective
Rule 43    node_security_objective -> NODE_SECUOBJ_CLOSE
Rule 44    security_objective_obj -> SECUOBJ_OBJ_OPEN security_objective_obj
Rule 45    security_objective_obj -> security_objective_name security_objective_obj
Rule 46    security_objective_obj -> security_objective_description security_objective_obj
Rule 47    security_objective_obj -> security_objective_objective_type security_objective_obj
Rule 48    security_objective_obj -> security_objective_security_service security_objective_obj
Rule 49    security_objective_obj -> security_objective_temporality security_objective_obj
Rule 50    security_objective_obj -> security_objective_source security_objective_obj
Rule 51    security_objective_obj -> SECUOBJ_OBJ_CLOSE
Rule 52    security_objective_name -> SECUOBJ_NAME_OPEN STRING SECUOBJ_NAME_CLOSE
Rule 53    security_objective_description -> SECUOBJ_DESCRIP_OPEN STRING SECUOBJ_DESCRIP_CLOSE
Rule 54    security_objective_objective_type -> SECUOBJ_OBJTYPE_OPEN STRING SECUOBJ_OBJTYPE_CLOSE
Rule 55    security_objective_security_service -> SECUOBJ_SECUSERV_OPEN STRING SECUOBJ_SECUSERV_CLOSE
Rule 56    security_objective_temporality -> SECUOBJ_TEMP_OPEN STRING SECUOBJ_TEMP_CLOSE
Rule 57    security_objective_source -> SECUOBJ_OBJSOUR_OPEN STRING SECUOBJ_OBJSOUR_CLOSE
Rule 58    threats -> THREATS_OPEN threats
Rule 59    threats -> threat threats
Rule 60    threats -> THREATS_CLOSE
Rule 61    threat -> THREAT_OPEN threat
Rule 62    threat -> threat_name threat
Rule 63    threat -> threat_description threat
Rule 64    threat -> threat_vulnerabilities threat
Rule 65    threat -> THREAT_CLOSE
Rule 66    threat_name -> THREAT_NAME_OPEN str THREAT_NAME_CLOSE
Rule 67    threat_description -> THREAT_DESCRIPTION_OPEN str THREAT_DESCRIPTION_CLOSE
Rule 68    threat_vulnerabilities -> THREAT_VULNERABILITIES_OPEN threat_vulnerabilities
Rule 69    threat_vulnerabilities -> threat_vulnerability threat_vulnerabilities
Rule 70    threat_vulnerabilities -> THREAT_VULNERABILITIES_CLOSE
Rule 71    threat_vulnerability -> VULNERABILITIES_VULNERABILITY_OPEN str VULNERABILITIES_VULNERABILITY_CLOSE
Rule 72    structure_security_policies -> SECURITY_POLICIES_OPEN security_policies SECURITY_POLICIES_CLOSE
Rule 73    security_policies -> security_policy security_policies
Rule 74    security_policies -> <empty>
Rule 75    security_policy -> SECURITY_POLICY_OPEN ID GENERAL_CLOSE POLICY_NAME_OPEN STRING POLICY_NAME_CLOSE POLICY_DESCRIPTION_OPEN STRING POLICY_DESCRIPTION_CLOSE security_objectives_SP SECURITY_POLICY_CLOSE
Rule 76    security_objectives_SP -> SP_OBJECTIVES_OPEN SECURITY_OBJECTIVE_OPEN STRING SECUOBJ_OBJ_CLOSE SP_OBJECTIVES_CLOSE
Rule 77    additional_info_SP -> SP_ADDITIONAL_INFORMATION_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE SP_ADDITIONAL_INFORMATION_CLOSE
Rule 78    structure_security_relationships -> security-relationships
Rule 79    security-relationships -> SECURITY_RELATIONSHIP_OPEN security-relationships
Rule 80    security-relationships -> linked-node security-relationships
Rule 81    security-relationships -> SECURITY_RELATIONSHIP_CLOSE
Rule 82    linked-node -> linked_node_open linked-node
Rule 83    linked-node -> relationship-type linked-node
Rule 84    linked-node -> LINKED_NODE_CLOSE
Rule 85    linked_node_open -> LINKED_NODE_OPEN ID GENERAL_CLOSE
Rule 86    relationship-type -> RELATIONSHIP_TYPE_OPEN ID GENERAL_CLOSE relationship-type
Rule 87    relationship-type -> security-objectives_SR relationship-type
Rule 88    relationship-type -> security-objectives_SR RELATIONSHIP_TYPE_CLOSE
Rule 89    security-objectives_SR -> SECURITY_OBJECTIVES_OPEN security-objectives_SR
Rule 90    security-objectives_SR -> security-objective_SR security-objectives_SR
Rule 91    security-objectives_SR -> security-objective_SR SECURITY_OBJECTIVES_CLOSE
Rule 92    security-objective_SR -> SECURITY_OBJECTIVE_OPEN SELF_OBJECTIVE_OPEN SELF_OBJECTIVE_CLOSE PEER_OBJECTIVE_OPEN PEER_OBJECTIVE_CLOSE SECUOBJ_OBJ_CLOSE
Rule 93    vulnerabilities -> VULNERABILITIES_OPEN vulnerabilities
Rule 94    vulnerabilities -> vulnerability vulnerabilities
Rule 95    vulnerabilities -> VULNERABILITIES_CLOSE
Rule 96    vulnerability -> VULNERABILITY_OPEN vulnerability
Rule 97    vulnerability -> vulnerability_name vulnerability
Rule 98    vulnerability -> vulnerability_refSecurity vulnerability
Rule 99    vulnerability -> vulnerability_overview vulnerability
Rule 100   vulnerability -> vulnerability_description vulnerability
Rule 101   vulnerability -> vulnerability_impact vulnerability
Rule 102   vulnerability -> vulnerability_severity vulnerability
Rule 103   vulnerability -> vulnerability_additionalInfo vulnerability
Rule 104   vulnerability -> VULNERABILITY_CLOSE
Rule 105   vulnerability_refSecurity -> VULN_REFERENCE_OPEN vulnerability_refSecurity
Rule 106   vulnerability_refSecurity -> refSecurity vulnerability_refSecurity
Rule 107   vulnerability_refSecurity -> VULN_REFERENCE_CLOSE
Rule 108   vulnerability_additionalInfo -> VULN_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE VULN_ADDITIONAL_INFO_CLOSE
Rule 109   vulnerability_name -> VULN_NAME_OPEN str VULN_NAME_CLOSE
Rule 110   refSecurity -> REF_SECURITY_OPEN str REF_SECURITY_CLOSE
Rule 111   vulnerability_overview -> VULN_OVERVIEW_OPEN str VULN_OVERVIEW_CLOSE
Rule 112   vulnerability_description -> VULN_DESCRIPTION_OPEN str VULN_DESCRIPTION_CLOSE
Rule 113   vulnerability_impact -> VULN_IMPACT_OPEN str VULN_IMPACT_CLOSE
Rule 114   vulnerability_severity -> VULN_SEVERITY_OPEN str VULN_SEVERITY_CLOSE
Rule 115   security_controls -> SECURITY_CONTROLS_OPEN security_controls
Rule 116   security_controls -> security_control security_controls
Rule 117   security_controls -> SECURITY_CONTROLS_CLOSE
Rule 118   security_control -> SECURITY_CONTROL_OPEN security_control
Rule 119   security_control -> security_control_name security_control
Rule 120   security_control -> security_control_description security_control
Rule 121   security_control -> sec_policies security_control
Rule 122   security_control -> securityControl_additionalInfo security_control
Rule 123   security_control -> SECURITY_CONTROL_CLOSE
Rule 124   sec_policies -> SECCONT_SECURITY_POLICIES_OPEN sec_policies
Rule 125   sec_policies -> security_policyID sec_policies
Rule 126   sec_policies -> SECCONT_SECURITY_POLICIES_CLOSE
Rule 127   securityControl_additionalInfo -> SECCONT_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE SECCONT_ADDITIONAL_INFO_CLOSE
Rule 128   security_control_name -> SECCONT_NAME_OPEN str SECCONT_NAME_CLOSE
Rule 129   security_control_description -> SECCONT_DESCRIPTION_OPEN str SECCONT_DESCRIPTION_CLOSE
Rule 130   security_policyID -> SECPOLICY_ID_OPEN str SECPOLICY_ID_CLOSE
Rule 131   node_risks -> NODE_RISKS_OPEN node_risks
Rule 132   node_risks -> risks_risk node_risks
Rule 133   node_risks -> NODE_RISKS_CLOSE
Rule 134   risks_risk -> RISKS_RISK_OPEN risks_risk
Rule 135   risks_risk -> risk_name risks_risk
Rule 136   risks_risk -> risk_objective risks_risk
Rule 137   risks_risk -> risk_vulnerability risks_risk
Rule 138   risks_risk -> risk_threat risks_risk
Rule 139   risks_risk -> risk_description risks_risk
Rule 140   risks_risk -> risk_likelihood risks_risk
Rule 141   risks_risk -> risk_impact risks_risk
Rule 142   risks_risk -> risk_temporality risks_risk
Rule 143   risks_risk -> RISKS_RISK_CLOSE
Rule 144   risk_name -> RISK_NAME_OPEN risk_name
Rule 145   risk_name -> STRING risk_name
Rule 146   risk_name -> RISK_NAME_CLOSE
Rule 147   risk_objective -> RISK_OBJ_OPEN STRING RISK_OBJ_CLOSE
Rule 148   risk_vulnerability -> RISK_VUL_OPEN STRING RISK_VUL_CLOSE
Rule 149   risk_threat -> RISK_THREAT_OPEN STRING RISK_THREAT_CLOSE
Rule 150   risk_description -> RISK_DESCRIPTION_OPEN STRING RISK_DESCRIPTION_CLOSE
Rule 151   risk_likelihood -> RISK_LIKHD_OPEN STRING RISK_LIKHD_CLOSE
Rule 152   risk_impact -> RISK_IMPACT_OPEN STRING RISK_IMPACT_CLOSE
Rule 153   risk_temporality -> RISK_TEMP_OPEN STRING RISK_TEMP_CLOSE
Rule 154   doc_comment -> COMMENT_OPEN doc_comment
Rule 155   doc_comment -> str doc_comment
Rule 156   doc_comment -> GENERAL_CLOSE
Rule 157   str -> STRING str
Rule 158   str -> STRING

Terminals, with rules where they appear

ADDINFOCOMM_CLOSE    : 
ADDINFOCOMM_OPEN     : 
ADDITIONAL_INFO_CLOSE : 77 108 127
ADDITIONAL_INFO_OPEN : 77 108 127
BASIC_INFORMATION_CLOSE : 22
BASIC_INFORMATION_OPEN : 18
COMMENT_OPEN         : 154
COMPONENT_NAME_CLOSE : 23
COMPONENT_NAME_OPEN  : 23
COMPONENT_OVERVIEW_CLOSE : 33
COMPONENT_OVERVIEW_OPEN : 33
GENERAL_CLOSE        : 75 85 86 156
ID                   : 75 85 86
INTRINSICAL_PROPERTIES_CLOSE : 32
INTRINSICAL_PROPERTIES_OPEN : 24
LINKED_NODE_CLOSE    : 84
LINKED_NODE_OPEN     : 85
MODEL_NODES_CLOSE    : 7
MODEL_NODES_OPEN     : 5
MODEL_NODE_CLOSE     : 17
MODEL_NODE_OPEN      : 8
NODE_RISKS_CLOSE     : 133
NODE_RISKS_OPEN      : 131
NODE_SECUOBJ_CLOSE   : 43
NODE_SECUOBJ_OPEN    : 41
OFFICE_DOCUMENT_CLOSE : 3
OFFICE_DOCUMENT_OPEN : 3
OFFICE_MODEL_CLOSE   : 4
OFFICE_MODEL_OPEN    : 4
PEER_OBJECTIVE_CLOSE : 92
PEER_OBJECTIVE_OPEN  : 92
POLICY_DESCRIPTION_CLOSE : 75
POLICY_DESCRIPTION_OPEN : 75
POLICY_NAME_CLOSE    : 75
POLICY_NAME_OPEN     : 75
PROPERTIES_COLOR_CLOSE : 34
PROPERTIES_COLOR_OPEN : 34
PROPERTIES_COUNT_CLOSE : 38
PROPERTIES_COUNT_OPEN : 38
PROPERTIES_FRAGILITY_CLOSE : 39
PROPERTIES_FRAGILITY_OPEN : 39
PROPERTIES_HEIGHT_CLOSE : 36
PROPERTIES_HEIGHT_OPEN : 36
PROPERTIES_MATERIAL_CLOSE : 35
PROPERTIES_MATERIAL_OPEN : 35
PROPERTIES_PROPERTY_CLOSE : 40
PROPERTIES_PROPERTY_OPEN : 40
PROPERTIES_WEIGHT_CLOSE : 37
PROPERTIES_WEIGHT_OPEN : 37
REF_SECURITY_CLOSE   : 110
REF_SECURITY_OPEN    : 110
RELATIONSHIP_TYPE_CLOSE : 88
RELATIONSHIP_TYPE_OPEN : 86
RISKS_RISK_CLOSE     : 143
RISKS_RISK_OPEN      : 134
RISK_ADDINFO_CLOSE   : 
RISK_ADDINFO_OPEN    : 
RISK_DESCRIPTION_CLOSE : 150
RISK_DESCRIPTION_OPEN : 150
RISK_IMPACT_CLOSE    : 152
RISK_IMPACT_OPEN     : 152
RISK_LIKHD_CLOSE     : 151
RISK_LIKHD_OPEN      : 151
RISK_NAME_CLOSE      : 146
RISK_NAME_OPEN       : 144
RISK_OBJ_CLOSE       : 147
RISK_OBJ_OPEN        : 147
RISK_TEMP_CLOSE      : 153
RISK_TEMP_OPEN       : 153
RISK_THREAT_CLOSE    : 149
RISK_THREAT_OPEN     : 149
RISK_VUL_CLOSE       : 148
RISK_VUL_OPEN        : 148
SECCONT_ADDITIONAL_INFO_CLOSE : 127
SECCONT_ADDITIONAL_INFO_OPEN : 127
SECCONT_DESCRIPTION_CLOSE : 129
SECCONT_DESCRIPTION_OPEN : 129
SECCONT_NAME_CLOSE   : 128
SECCONT_NAME_OPEN    : 128
SECCONT_SECURITY_POLICIES_CLOSE : 126
SECCONT_SECURITY_POLICIES_OPEN : 124
SECPOLICY_ID_CLOSE   : 130
SECPOLICY_ID_OPEN    : 130
SECUOBJ_ADDINFO_CLOSE : 
SECUOBJ_ADDINFO_OPEN : 
SECUOBJ_DESCRIP_CLOSE : 53
SECUOBJ_DESCRIP_OPEN : 53
SECUOBJ_NAME_CLOSE   : 52
SECUOBJ_NAME_OPEN    : 52
SECUOBJ_OBJSOUR_CLOSE : 57
SECUOBJ_OBJSOUR_OPEN : 57
SECUOBJ_OBJSP_OPEN   : 
SECUOBJ_OBJTYPE_CLOSE : 54
SECUOBJ_OBJTYPE_OPEN : 54
SECUOBJ_OBJ_CLOSE    : 51 76 92
SECUOBJ_OBJ_OPEN     : 44
SECUOBJ_SECUSERV_CLOSE : 55
SECUOBJ_SECUSERV_OPEN : 55
SECUOBJ_TEMP_CLOSE   : 56
SECUOBJ_TEMP_OPEN    : 56
SECURITY_CONTROLS_CLOSE : 117
SECURITY_CONTROLS_OPEN : 115
SECURITY_CONTROL_CLOSE : 123
SECURITY_CONTROL_OPEN : 118
SECURITY_OBJECTIVES_CLOSE : 91
SECURITY_OBJECTIVES_OPEN : 89
SECURITY_OBJECTIVE_OPEN : 76 92
SECURITY_POLICIES_CLOSE : 72
SECURITY_POLICIES_OPEN : 72
SECURITY_POLICY_CLOSE : 75
SECURITY_POLICY_OPEN : 75
SECURITY_RELATIONSHIP_CLOSE : 81
SECURITY_RELATIONSHIP_OPEN : 79
SELF_OBJECTIVE_CLOSE : 92
SELF_OBJECTIVE_OPEN  : 92
SP_ADDITIONAL_INFORMATION_CLOSE : 77
SP_ADDITIONAL_INFORMATION_OPEN : 77
SP_OBJECTIVES_CLOSE  : 76
SP_OBJECTIVES_OPEN   : 76
STRING               : 52 53 54 55 56 57 75 75 76 145 147 148 149 150 151 152 153 157 158
THREATS_CLOSE        : 60
THREATS_OPEN         : 58
THREAT_CLOSE         : 65
THREAT_DESCRIPTION_CLOSE : 67
THREAT_DESCRIPTION_OPEN : 67
THREAT_NAME_CLOSE    : 66
THREAT_NAME_OPEN     : 66
THREAT_OPEN          : 61
THREAT_VULNERABILITIES_CLOSE : 70
THREAT_VULNERABILITIES_OPEN : 68
VULNERABILITIES_CLOSE : 95
VULNERABILITIES_OPEN : 93
VULNERABILITIES_VULNERABILITY_CLOSE : 71
VULNERABILITIES_VULNERABILITY_OPEN : 71
VULNERABILITY_CLOSE  : 104
VULNERABILITY_OPEN   : 96
VULN_ADDITIONAL_INFO_CLOSE : 108
VULN_ADDITIONAL_INFO_OPEN : 108
VULN_DESCRIPTION_CLOSE : 112
VULN_DESCRIPTION_OPEN : 112
VULN_IMPACT_CLOSE    : 113
VULN_IMPACT_OPEN     : 113
VULN_NAME_CLOSE      : 109
VULN_NAME_OPEN       : 109
VULN_OVERVIEW_CLOSE  : 111
VULN_OVERVIEW_OPEN   : 111
VULN_REFERENCE_CLOSE : 107
VULN_REFERENCE_OPEN  : 105
VULN_SEVERITY_CLOSE  : 114
VULN_SEVERITY_OPEN   : 114
XML_VERSION          : 1
error                : 

Nonterminals, with rules where they appear

additional_info_SP   : 
basic_info           : 9 18 19 20 21
component_name       : 19
component_overview   : 20
doc_comment          : 2 154 155
doc_model            : 1 2 0
intrinsical_properties : 21 24 25 26 27 28 29 30 31
linked-node          : 80 82 83
linked_node_open     : 82
model_node           : 5 6 8 9 10 11 12 13 14 15 16
model_nodes          : 4 5 6
node_risks           : 14 131 132
node_security_objective : 10 41 42
office_model         : 3
properties_color     : 25
properties_count     : 29
properties_fragility : 30
properties_height    : 27
properties_material  : 26
properties_property  : 31
properties_weight    : 28
refSecurity          : 106
relationship-type    : 83 86 87
risk_description     : 139
risk_impact          : 141
risk_likelihood      : 140
risk_name            : 135 144 145
risk_objective       : 136
risk_temporality     : 142
risk_threat          : 138
risk_vulnerability   : 137
risks_risk           : 132 134 135 136 137 138 139 140 141 142
sec_policies         : 121 124 125
security-objective_SR : 90 91
security-objectives_SR : 87 88 89 90
security-relationships : 78 79 80
securityControl_additionalInfo : 122
security_control     : 116 118 119 120 121 122
security_control_description : 120
security_control_name : 119
security_controls    : 16 115 116
security_objective_description : 46
security_objective_name : 45
security_objective_obj : 42 44 45 46 47 48 49 50
security_objective_objective_type : 47
security_objective_security_service : 48
security_objective_source : 50
security_objective_temporality : 49
security_objectives_SP : 75
security_policies    : 72 73
security_policy      : 73
security_policyID    : 125
str                  : 23 33 34 35 36 37 38 39 40 66 67 71 109 110 111 112 113 114 128 129 130 155 157
structure_security_policies : 15
structure_security_relationships : 11
threat               : 59 61 62 63 64
threat_description   : 63
threat_name          : 62
threat_vulnerabilities : 64 68 69
threat_vulnerability : 69
threats              : 13 58 59
vulnerabilities      : 12 93 94
vulnerability        : 94 96 97 98 99 100 101 102 103
vulnerability_additionalInfo : 103
vulnerability_description : 100
vulnerability_impact : 101
vulnerability_name   : 97
vulnerability_overview : 99
vulnerability_refSecurity : 98 105 106
vulnerability_severity : 102

Parsing method: LALR

state 0

    (0) S' -> . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (154) doc_comment -> . COMMENT_OPEN doc_comment
    (155) doc_comment -> . str doc_comment
    (156) doc_comment -> . GENERAL_CLOSE
    (157) str -> . STRING str
    (158) str -> . STRING

    XML_VERSION     shift and go to state 2
    OFFICE_DOCUMENT_OPEN shift and go to state 4
    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_model                      shift and go to state 1
    doc_comment                    shift and go to state 3
    str                            shift and go to state 6

state 1

    (0) S' -> doc_model .



state 2

    (1) doc_model -> XML_VERSION . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (154) doc_comment -> . COMMENT_OPEN doc_comment
    (155) doc_comment -> . str doc_comment
    (156) doc_comment -> . GENERAL_CLOSE
    (157) str -> . STRING str
    (158) str -> . STRING

    XML_VERSION     shift and go to state 2
    OFFICE_DOCUMENT_OPEN shift and go to state 4
    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_model                      shift and go to state 9
    doc_comment                    shift and go to state 3
    str                            shift and go to state 6

state 3

    (2) doc_model -> doc_comment . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (154) doc_comment -> . COMMENT_OPEN doc_comment
    (155) doc_comment -> . str doc_comment
    (156) doc_comment -> . GENERAL_CLOSE
    (157) str -> . STRING str
    (158) str -> . STRING

    XML_VERSION     shift and go to state 2
    OFFICE_DOCUMENT_OPEN shift and go to state 4
    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_comment                    shift and go to state 3
    doc_model                      shift and go to state 10
    str                            shift and go to state 6

state 4

    (3) doc_model -> OFFICE_DOCUMENT_OPEN . office_model OFFICE_DOCUMENT_CLOSE
    (4) office_model -> . OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE

    OFFICE_MODEL_OPEN shift and go to state 12

    office_model                   shift and go to state 11

state 5

    (154) doc_comment -> COMMENT_OPEN . doc_comment
    (154) doc_comment -> . COMMENT_OPEN doc_comment
    (155) doc_comment -> . str doc_comment
    (156) doc_comment -> . GENERAL_CLOSE
    (157) str -> . STRING str
    (158) str -> . STRING

    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_comment                    shift and go to state 13
    str                            shift and go to state 6

state 6

    (155) doc_comment -> str . doc_comment
    (154) doc_comment -> . COMMENT_OPEN doc_comment
    (155) doc_comment -> . str doc_comment
    (156) doc_comment -> . GENERAL_CLOSE
    (157) str -> . STRING str
    (158) str -> . STRING

    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    str                            shift and go to state 6
    doc_comment                    shift and go to state 14

state 7

    (156) doc_comment -> GENERAL_CLOSE .

    XML_VERSION     reduce using rule 156 (doc_comment -> GENERAL_CLOSE .)
    OFFICE_DOCUMENT_OPEN reduce using rule 156 (doc_comment -> GENERAL_CLOSE .)
    COMMENT_OPEN    reduce using rule 156 (doc_comment -> GENERAL_CLOSE .)
    GENERAL_CLOSE   reduce using rule 156 (doc_comment -> GENERAL_CLOSE .)
    STRING          reduce using rule 156 (doc_comment -> GENERAL_CLOSE .)


state 8

    (157) str -> STRING . str
    (158) str -> STRING .
    (157) str -> . STRING str
    (158) str -> . STRING

  ! shift/reduce conflict for STRING resolved as shift
    COMMENT_OPEN    reduce using rule 158 (str -> STRING .)
    GENERAL_CLOSE   reduce using rule 158 (str -> STRING .)
    COMPONENT_NAME_CLOSE reduce using rule 158 (str -> STRING .)
    COMPONENT_OVERVIEW_CLOSE reduce using rule 158 (str -> STRING .)
    PROPERTIES_COLOR_CLOSE reduce using rule 158 (str -> STRING .)
    PROPERTIES_MATERIAL_CLOSE reduce using rule 158 (str -> STRING .)
    PROPERTIES_HEIGHT_CLOSE reduce using rule 158 (str -> STRING .)
    PROPERTIES_WEIGHT_CLOSE reduce using rule 158 (str -> STRING .)
    PROPERTIES_COUNT_CLOSE reduce using rule 158 (str -> STRING .)
    PROPERTIES_FRAGILITY_CLOSE reduce using rule 158 (str -> STRING .)
    PROPERTIES_PROPERTY_CLOSE reduce using rule 158 (str -> STRING .)
    VULN_NAME_CLOSE reduce using rule 158 (str -> STRING .)
    VULN_OVERVIEW_CLOSE reduce using rule 158 (str -> STRING .)
    VULN_DESCRIPTION_CLOSE reduce using rule 158 (str -> STRING .)
    VULN_IMPACT_CLOSE reduce using rule 158 (str -> STRING .)
    VULN_SEVERITY_CLOSE reduce using rule 158 (str -> STRING .)
    THREAT_NAME_CLOSE reduce using rule 158 (str -> STRING .)
    THREAT_DESCRIPTION_CLOSE reduce using rule 158 (str -> STRING .)
    SECCONT_NAME_CLOSE reduce using rule 158 (str -> STRING .)
    SECCONT_DESCRIPTION_CLOSE reduce using rule 158 (str -> STRING .)
    REF_SECURITY_CLOSE reduce using rule 158 (str -> STRING .)
    VULNERABILITIES_VULNERABILITY_CLOSE reduce using rule 158 (str -> STRING .)
    SECPOLICY_ID_CLOSE reduce using rule 158 (str -> STRING .)
    STRING          shift and go to state 8

  ! STRING          [ reduce using rule 158 (str -> STRING .) ]

    str                            shift and go to state 15

state 9

    (1) doc_model -> XML_VERSION doc_model .

    $end            reduce using rule 1 (doc_model -> XML_VERSION doc_model .)


state 10

    (2) doc_model -> doc_comment doc_model .

    $end            reduce using rule 2 (doc_model -> doc_comment doc_model .)


state 11

    (3) doc_model -> OFFICE_DOCUMENT_OPEN office_model . OFFICE_DOCUMENT_CLOSE

    OFFICE_DOCUMENT_CLOSE shift and go to state 16


state 12

    (4) office_model -> OFFICE_MODEL_OPEN . model_nodes OFFICE_MODEL_CLOSE
    (5) model_nodes -> . MODEL_NODES_OPEN model_node model_nodes
    (6) model_nodes -> . model_node model_nodes
    (7) model_nodes -> . MODEL_NODES_CLOSE
    (8) model_node -> . MODEL_NODE_OPEN model_node
    (9) model_node -> . basic_info model_node
    (10) model_node -> . node_security_objective model_node
    (11) model_node -> . structure_security_relationships model_node
    (12) model_node -> . vulnerabilities model_node
    (13) model_node -> . threats model_node
    (14) model_node -> . node_risks model_node
    (15) model_node -> . structure_security_policies model_node
    (16) model_node -> . security_controls model_node
    (17) model_node -> . MODEL_NODE_CLOSE
    (18) basic_info -> . BASIC_INFORMATION_OPEN basic_info
    (19) basic_info -> . component_name basic_info
    (20) basic_info -> . component_overview basic_info
    (21) basic_info -> . intrinsical_properties basic_info
    (22) basic_info -> . BASIC_INFORMATION_CLOSE
    (41) node_security_objective -> . NODE_SECUOBJ_OPEN node_security_objective
    (42) node_security_objective -> . security_objective_obj node_security_objective
    (43) node_security_objective -> . NODE_SECUOBJ_CLOSE
    (78) structure_security_relationships -> . security-relationships
    (93) vulnerabilities -> . VULNERABILITIES_OPEN vulnerabilities
    (94) vulnerabilities -> . vulnerability vulnerabilities
    (95) vulnerabilities -> . VULNERABILITIES_CLOSE
    (58) threats -> . THREATS_OPEN threats
    (59) threats -> . threat threats
    (60) threats -> . THREATS_CLOSE
    (131) node_risks -> . NODE_RISKS_OPEN node_risks
    (132) node_risks -> . risks_risk node_risks
    (133) node_risks -> . NODE_RISKS_CLOSE
    (72) structure_security_policies -> . SECURITY_POLICIES_OPEN security_policies SECURITY_POLICIES_CLOSE
    (115) security_controls -> . SECURITY_CONTROLS_OPEN security_controls
    (116) security_controls -> . security_control security_controls
    (117) security_controls -> . SECURITY_CONTROLS_CLOSE
    (23) component_name -> . COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
    (33) component_overview -> . COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
    (24) intrinsical_properties -> . INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
    (25) intrinsical_properties -> . properties_color intrinsical_properties
    (26) intrinsical_properties -> . properties_material intrinsical_properties
    (27) intrinsical_properties -> . properties_height intrinsical_properties
    (28) intrinsical_properties -> . properties_weight intrinsical_properties
    (29) intrinsical_properties -> . properties_count intrinsical_properties
    (30) intrinsical_properties -> . properties_fragility intrinsical_properties
    (31) intrinsical_properties -> . properties_property intrinsical_properties
    (32) intrinsical_properties -> . INTRINSICAL_PROPERTIES_CLOSE
    (44) security_objective_obj -> . SECUOBJ_OBJ_OPEN security_objective_obj
    (45) security_objective_obj -> . security_objective_name security_objective_obj
    (46) security_objective_obj -> . security_objective_description security_objective_obj
    (47) security_objective_obj -> . security_objective_objective_type security_objective_obj
    (48) security_objective_obj -> . security_objective_security_service security_objective_obj
    (49) security_objective_obj -> . security_objective_temporality security_objective_obj
